--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,32 @@
-Django>=5.1.7,<6.0
-gunicorn
-python-decouple
-python-dotenv
-requests
-geopy
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.8.1
+boto3==1.38.4
+botocore==1.38.4
+certifi==2025.1.31
+charset-normalizer==3.4.1
+Django==5.1.6
+geographiclib==2.0
+geopy==2.4.1
+gunicorn==23.0.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+jmespath==1.0.1
+ollama==0.4.8
+packaging==25.0
+psycopg2-binary==2.9.10
+pydantic==2.11.3
+pydantic_core==2.33.1
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+python-dotenv==1.1.0
+requests==2.32.3
+s3transfer==0.12.0
+six==1.17.0
+sniffio==1.3.1
+sqlparse==0.5.3
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+urllib3==2.4.0
